environments/dev/apps/platform-portal-bff-kustomization/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-portal-bff
spec:
  template:
    spec:
      containers:
        - name: platform-portal-bff
