environments/dev/apps/platform-portal-bff-kustomization/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-portal-bff-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: platform.development.wapps.ai
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: platform-portal-bff-service
                port:
                  number: 80
    - host: platform-portal-csr.development.wapps.ai
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: platform-portal-bff-service
                port:
                  number: 80
